syntax = "proto3";
package pb;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "github.com/lyft/protoc-gen-validate/validate/validate.proto";

service VisitService {
    // Simple return the visit id
    rpc Get(ID) returns (VisitResponse) {
        option (google.api.http) = {
          get: "/v1/visit/{id}"
        };
    }
    // Update/Create a device
    rpc Set(VisitRequest) returns (VisitResponse) {
        option (google.api.http) = {
          post: "/v1/visit"
          body: "*"
          additional_bindings {
            put: "/v1/visit"
            body: "*"
          }
        };
    }
}

message ID {
    uint32 id = 1 [(validate.rules).uint32.gte = 0];
};

message VisitRequest {
    uint32 id = 1 [(validate.rules).uint32.gte = 0];
    string first_name = 2 [(validate.rules).string.min_len = 2];
    string last_name = 3 [(validate.rules).string.min_len = 2];
};

message VisitResponse {
    uint32 id = 1;
    string first_name = 2;
    string last_name = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
};